@@ -1,3 +1,7 @@
+Tue Feb 22 03:10:20 CET 2005 William Lachance <wlach@nit.ca>
+
+	* autogen.sh configure.ac: Properly check for xnest #168124
+	
 Mon Feb 21 11:48:20 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* doc/helping.html: one more Evince->Sabaon cleanup bug #168000
